# pkg-test-lib

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/test-lib/: test-lib.hpp
source/: test-lib.cpp
test/: CMakeLists.txt
test/source/: test-lib_test.cpp
